--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   pie_chart: ^3.1.1
   flutter_circular_chart: ^0.1.0
   fl_chart: ^0.10.1
+  intl: ^0.16.1
 
 
   # The following adds the Cupertino Icons font to your application.
